[package]
name = "vit"
version = "1.0.0"
description = "View Image in Terminal"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BlackThunder080/vit"

[dependencies]
image = "0.24.7"
crossterm = "0.27.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
clap = { version = "4.4.11", features = ["derive"] }
clipboard = "0.5.0"
webbrowser = "0.8.12"
